Adapt controllers to generated interfaces
